Fixed the horizontal scrolling issue in styling

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,22 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    width: 100%;
+    height: 100vh;
+}
+
 body {
     margin: 0;
     padding: 32px 16px;
-
-    width: auto;
-    height: 92vh;
+    
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    
 
     display: flex;
     flex-direction: column;
@@ -14,28 +27,43 @@ body {
 }
 
 
+#content {
+    width: 100%;
+    height: 100%;
+    
+
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
 #product-img {
     width: 100%;
-    height: 40%;
+    height: 100%;
     
+    flex-basis: 30%;
+
     background-image: url('../images/image-product-mobile.jpg');
-    
+
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
+
     border-radius: 8px 8px 0px 0px;
 }
 
 #product-card {
     padding: 16px;
 
-    width: auto;
-    height: 60%;
+    width: 100%;
+    height: 100%;
+    flex-basis: 70%;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     align-items: center;
 
     background-color: white;
@@ -44,12 +72,15 @@ body {
 }
 
 #title {
+    padding: 16px 0;
     font-family: 'Fraunces', serif;
     font-size: 32px;
     color: hsl(212, 21%, 14%);
+
 }
 
 #paragraph {
+    padding: 16px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 
@@ -60,7 +91,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
 }
 
 #price-sale {
@@ -80,13 +111,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 
     width: 100%;
-    height: 20%;
+    height: 60px;
 
-    margin-top: 16px;
-
+    margin: 16px 0;
+    padding: 16px 0;
     border: 0px;
     border-radius: 8px;
 
@@ -97,6 +128,13 @@ body {
     background-color: hsl(158, 36%, 37%);
     color: white;
 
+}
+
+@media only screen and (max-width: 1440px) {
+    #product-card {
+        flex-direction: row;
+
+    }
 }
 
 .attribution {
